fix logo and tagline spacing.

--- a/www/inc/style.css
+++ b/www/inc/style.css
@@ -32,13 +32,13 @@ h1,h2,h3,h4,h5 { color: #729fcf; margin-top: 3em; font-family: Nirvana, Sans-Ser
           background: black url(../images/splash-bg1.png) no-repeat center bottom; }
   #splash .widthcontainer { position: relative; min-width: 878px; }
   #logo { position: absolute; text-indent: -300em; 
-          width: 412px; height: 388px; top: 55px; left: 30px; margin-top: 0;
+          width: 412px; height: 388px; top: 55px; left: 10px; margin-top: 0;
           background: url('../images/logo.png') no-repeat top left; z-index: 2;
           }
   #lightcone { position: absolute; z-index: 1; background: url(../images/cone.png) no-repeat 0 0;
                width: 880px; height: 172px; top: 290px; left: -80px; }
   #easymultimedia { margin-top: 180px; }
-   .tagline { margin-top: 435px; color: #ddd; text-align: center; font-weight: bold; width: 400px; padding: 20px;}
+   .tagline { margin-top: 435px; color: #ddd; text-align: center; font-weight: bold; width: 400px; padding: 20px 5px;}
   #install-buttons { position: relative; padding: 0 4em; }
     .install-button { width: 120px; height: 40px; border: 0; position: absolute; cursor: pointer; }
     .install-button:hover { background-position: left center; }
